# crbm

./: .gitignore  CMakeLists.txt  Makefile  README.md  compute.cu  crbm.cu  crbm.h  crbmCompute.cu  crbmOld.cu  linCombinerDynamic.cu  linearCombiner.cu  linearCombinerDynamic.cu  matrix.h  nonLinCombinerDynamic.cu  rbm.cu  rbmCompute.cu  setup.py  test.cu  utils.h
crbmComputer/: Makefile  README.md  crbmComputer.cpp  crbmComputer.cu  crbmComputer.h  crbmComputer.py  crbmComputerBinding.cpp  crbmComputerBinding.h  crbmComputerTest.py
crbmComputer/debian/: changelog  control  crbm-computer-cpu-dev.install  crbm-computer-cpu-example.install  crbm-computer-cpu.install  crbm-computer-cpu.links  rules
crbmComputer/testWeights/: img-batch2.0.transformed.rbm
dataConv/: im2txt.py  makeIm.py  showIm.py  showWeights.py
debian/: .gitignore  changelog  control  rules  szn-libcrbmcomputercpu-dev.install  szn-libcrbmcomputercpu-example.install
examples/: crbmComputerTest.py
examples/testWeights/: img-batch2.0.transformed.transformed.rbm  img-batch2.0.transformed.transformed.transformed.rbm
rbmComputer/: Makefile  matrix.h  rbmComputer.cu  rbmComputer.h  rbmComputerBinding.cpp  rbmComputerInstance.py
scripts/: bin2sparse.py  bin2text.py  im2bin.py  im2binBatchs.py  im2binBatchs2.py  im2txt.py  makeFeatureImage.py  makeWeightsImage.py  makeWeightsImageV0.py  makeWeightsImageV2.py  makeWeightsImages.py  reconstructImageFromStdin.py  showIm.py  showTrans.py  showWeights.py
src/: CMakeLists.txt  Makefile  compute.cu  crbm.cu  crbm.h  crbmCompute.cu  crbmComputeCpu.cpp  crbmComputeGpu.cu  crbmCpu.h  crbmGpu.cu  crbmGpu.h  linearCombiner.cu  matrix.h  matrixCpu.cpp  matrixCpu.h  myAssert.h  rbm.cu  rbmCompute.cu  setting.h  test.cu  utils.cpp  utils.h  utilsGpu.h
src/crbmComputer/: CMakeLists.txt  Makefile  crbmComputer.cpp  crbmComputer.cu  crbmComputer.h  crbmComputer.py  crbmComputerBinding.cpp  crbmComputerBinding.h  crbmComputerInstance.py  pkg-config.pc.in
src/crbmComputer/test/: crbmComputerTest.py  runtest.sh  testLayer1.rbm
